2007-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date.

2007-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Implement user-configurable ICE event handling for
	the JTAG ICE mkII.
	* src/jtag1.h: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtag2run.cc: (Ditto.)
	* src/jtagrun.cc: (Ditto.)
	* src/main.cc: (Ditto.)
	* doc/avarice.1: Document the new option.

2007-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtaggeneric.cc: properly initialize private class members
	of jtag objects in all constructors, not just the default one
	(which we actually don't use).

2007-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* INSTALL-FROM-CVS: Bump required version numbers for automake to
	1.9, and autoconf to 2.59 as this is the only thing we are testing
	these days.

2007-04-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dave N6NZ
	* src/devdescr.cc: add entries for ATmega325/3250/645/6450.

2007-03-21 Colin O'Flynn <coflynn@newae.com>

	* src/main.cc: Added patch #1121113 which adds a JTAG_DEV env variable
	* doc/avarice.1: Added JTAG_DEV to docs

2007-02-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add entries for AT90PWM2/3B.
	* tools/devdescr.xsl: Declare the "count" parameter in the format-hex
	template.  Recent versions of xsltproc appear to be more picky about
	that.

2007-02-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump date, now that we've got a first previous of
	Colin's soft BP implementation.

2007-02-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(On behalf of Colin O'Flynn)
	* src/jtag2bp.cc: Implement software breakpoints.
	* src/jtag2.h: (Ditto.)

2007-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump date.

2007-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Complete overhaul of the USB communication:
	- Use a second pipe (ctrlPipe) between main AVaRICE and the
	  daemon to signal control information.